--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -258,12 +258,12 @@ body {
 .main-content-wrapper .filter-books-wrapper .filter-section .buttons-section .dropdown-button.active-btn .dropdown-text {
   color: #ffffff;
 }
-.main-content-wrapper .filter-books-wrapper .filter-section .buttons-section .dropdown-options {
+.main-content-wrapper .filter-books-wrapper .filter-section .dropdown-options {
   overflow: hidden;
   height: 0;
   transition: height 0.2s;
 }
-.main-content-wrapper .filter-books-wrapper .filter-section .buttons-section .dropdown-options li {
+.main-content-wrapper .filter-books-wrapper .filter-section .dropdown-options li {
   padding: 8px 24px;
   color: hsla(240, 6%, 25%, 0.6);
   font-family: FiraGO350;
@@ -272,52 +272,70 @@ body {
   line-height: normal;
   cursor: pointer;
 }
-.main-content-wrapper .filter-books-wrapper .filter-section .buttons-section .dropdown-options li:hover {
+.main-content-wrapper .filter-books-wrapper .filter-section .dropdown-options li:hover {
   background-color: hsl(208, 86%, 92%);
 }
-.main-content-wrapper .filter-books-wrapper .filter-section .buttons-section .dropdown-options.displayed {
+.main-content-wrapper .filter-books-wrapper .filter-section .dropdown-options.displayed {
   height: 156px;
   outline: 2px solid hsla(240, 6%, 25%, 0.6);
   border-radius: 15px;
 }
-.main-content-wrapper .filter-books-wrapper .filter-section .clean-filters {
+.main-content-wrapper .filter-books-wrapper .clean-filters {
   cursor: pointer;
   display: flex;
   justify-content: flex-end;
   gap: 10px;
   margin: 11px 0 19px;
 }
-.main-content-wrapper .filter-books-wrapper .filter-section .clean-filters .clean-filters-text {
+.main-content-wrapper .filter-books-wrapper .clean-filters .clean-filters-text {
   color: rgba(60, 60, 67, 0.6);
   font-family: FiraGo600;
   font-size: 1rem;
 }
-.main-content-wrapper .filter-books-wrapper .filter-section .dropdownUnderline {
+.main-content-wrapper .filter-books-wrapper .dropdownUnderline {
   width: 100%;
   height: 2px;
   background-color: #D8EBFC;
   border-radius: 2px;
 }
-.main-content-wrapper .filter-books-wrapper .filter-section .media-type-section {
+.main-content-wrapper .filter-books-wrapper .clean-filters {
+  cursor: pointer;
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
+  margin: 11px 0 19px;
+}
+.main-content-wrapper .filter-books-wrapper .clean-filters .clean-filters-text {
+  color: rgba(60, 60, 67, 0.6);
+  font-family: FiraGo600;
+  font-size: 1rem;
+}
+.main-content-wrapper .filter-books-wrapper .dropdownUnderline {
+  width: 100%;
+  height: 2px;
+  background-color: #D8EBFC;
+  border-radius: 2px;
+}
+.main-content-wrapper .filter-books-wrapper .media-type-section {
   display: flex;
   flex-direction: column;
   gap: 36px;
 }
-.main-content-wrapper .filter-books-wrapper .filter-section .media-type-section .dropdown-section-wrapper {
+.main-content-wrapper .filter-books-wrapper .media-type-section .dropdown-section-wrapper {
   display: flex;
   flex-direction: column;
   gap: 15px;
 }
-.main-content-wrapper .filter-books-wrapper .filter-section .media-type-section .dropdown-section-wrapper h2 {
+.main-content-wrapper .filter-books-wrapper .media-type-section .dropdown-section-wrapper h2 {
   color: #333333;
   font-size: 24px;
   font-family: FiraGo700;
 }
-.main-content-wrapper .filter-books-wrapper .filter-section .media-type-section .dropdown-section-wrapper .dropdown {
+.main-content-wrapper .filter-books-wrapper .media-type-section .dropdown-section-wrapper .dropdown {
   display: flex;
   flex-direction: column;
 }
-.main-content-wrapper .filter-books-wrapper .filter-section .media-type-section .dropdown-section-wrapper .dropdown label {
+.main-content-wrapper .filter-books-wrapper .media-type-section .dropdown-section-wrapper .dropdown label {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -328,10 +346,10 @@ body {
   color: #333333;
   position: relative;
 }
-.main-content-wrapper .filter-books-wrapper .filter-section .media-type-section .dropdown-section-wrapper .dropdown label:not(:last-child) {
+.main-content-wrapper .filter-books-wrapper .media-type-section .dropdown-section-wrapper .dropdown label:not(:last-child) {
   margin-bottom: 15px;
 }
-.main-content-wrapper .filter-books-wrapper .filter-section .media-type-section .dropdown-section-wrapper .dropdown label input[type=checkbox] {
+.main-content-wrapper .filter-books-wrapper .media-type-section .dropdown-section-wrapper .dropdown label input[type=checkbox] {
   -moz-appearance: none;
        appearance: none;
   -webkit-appearance: none;
@@ -344,20 +362,20 @@ body {
   display: inline-block;
   vertical-align: middle;
 }
-.main-content-wrapper .filter-books-wrapper .filter-section .media-type-section .dropdown-section-wrapper .dropdown label input[type=checkbox]::before {
+.main-content-wrapper .filter-books-wrapper .media-type-section .dropdown-section-wrapper .dropdown label input[type=checkbox]::before {
   content: "";
   display: block;
   width: 100%;
   height: 100%;
 }
-.main-content-wrapper .filter-books-wrapper .filter-section .media-type-section .dropdown-section-wrapper .dropdown label input[type=checkbox]:checked::before {
+.main-content-wrapper .filter-books-wrapper .media-type-section .dropdown-section-wrapper .dropdown label input[type=checkbox]:checked::before {
   background-color: #0077ff;
 }
-.main-content-wrapper .filter-books-wrapper .filter-section .media-type-section .dropdown-section-wrapper .dropdown label input[type=checkbox]:checked {
+.main-content-wrapper .filter-books-wrapper .media-type-section .dropdown-section-wrapper .dropdown label input[type=checkbox]:checked {
   background-color: #0077ff;
   border: 2px solid #0077ff;
 }
-.main-content-wrapper .filter-books-wrapper .filter-section .media-type-section .dropdown-section-wrapper .dropdown label input[type=checkbox]:checked::after {
+.main-content-wrapper .filter-books-wrapper .media-type-section .dropdown-section-wrapper .dropdown label input[type=checkbox]:checked::after {
   content: "";
   position: absolute;
   top: 50%;
@@ -368,16 +386,16 @@ body {
   border-width: 0 2.5px 2.5px 0;
   transform: translate(-40%, -60%) rotate(45deg);
 }
-.main-content-wrapper .filter-books-wrapper .filter-section .media-type-section .dropdown-section-wrapper .publish-date .date-wrapper {
+.main-content-wrapper .filter-books-wrapper .media-type-section .dropdown-section-wrapper .publish-date .date-wrapper {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
 }
-.main-content-wrapper .filter-books-wrapper .filter-section .media-type-section .dropdown-section-wrapper .publish-date .date-wrapper img {
+.main-content-wrapper .filter-books-wrapper .media-type-section .dropdown-section-wrapper .publish-date .date-wrapper img {
   rotate: 270deg;
 }
-.main-content-wrapper .filter-books-wrapper .filter-section .media-type-section .dropdown-section-wrapper .publish-date .date-wrapper .date-input-container {
+.main-content-wrapper .filter-books-wrapper .media-type-section .dropdown-section-wrapper .publish-date .date-wrapper .date-input-container {
   display: flex;
   align-items: center;
   position: relative;
@@ -388,22 +406,22 @@ body {
   padding: 17px 16px;
   cursor: pointer;
 }
-.main-content-wrapper .filter-books-wrapper .filter-section .media-type-section .dropdown-section-wrapper .publish-date .date-wrapper .date-input-container label {
+.main-content-wrapper .filter-books-wrapper .media-type-section .dropdown-section-wrapper .publish-date .date-wrapper .date-input-container label {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
 }
-.main-content-wrapper .filter-books-wrapper .filter-section .media-type-section .dropdown-section-wrapper .publish-date .date-wrapper .date-input-container label .calendar-icon {
+.main-content-wrapper .filter-books-wrapper .media-type-section .dropdown-section-wrapper .publish-date .date-wrapper .date-input-container label .calendar-icon {
   margin-right: 10px;
   rotate: 0deg;
 }
-.main-content-wrapper .filter-books-wrapper .filter-section .media-type-section .dropdown-section-wrapper .publish-date .date-wrapper .date-input-container label p {
+.main-content-wrapper .filter-books-wrapper .media-type-section .dropdown-section-wrapper .publish-date .date-wrapper .date-input-container label p {
   font-size: 16px;
   font-family: FiraGo400;
   color: rgba(60, 60, 67, 0.6);
 }
-.main-content-wrapper .filter-books-wrapper .filter-section .media-type-section .dropdown-section-wrapper .publish-date .date-wrapper .date-input-container label input[type=date] {
+.main-content-wrapper .filter-books-wrapper .media-type-section .dropdown-section-wrapper .publish-date .date-wrapper .date-input-container label input[type=date] {
   position: absolute;
   border: none;
   outline: none;
@@ -416,14 +434,14 @@ body {
   width: 10px;
   cursor: pointer;
 }
-.main-content-wrapper .filter-books-wrapper .filter-section .media-type-section .dropdown-section-wrapper .publish-date .date-wrapper .date-input-container label input[type=date]::-webkit-inner-spin-button, .main-content-wrapper .filter-books-wrapper .filter-section .media-type-section .dropdown-section-wrapper .publish-date .date-wrapper .date-input-container label input[type=date]::-webkit-clear-button {
+.main-content-wrapper .filter-books-wrapper .media-type-section .dropdown-section-wrapper .publish-date .date-wrapper .date-input-container label input[type=date]::-webkit-inner-spin-button, .main-content-wrapper .filter-books-wrapper .media-type-section .dropdown-section-wrapper .publish-date .date-wrapper .date-input-container label input[type=date]::-webkit-clear-button {
   display: none;
 }
-.main-content-wrapper .filter-books-wrapper .filter-section .media-type-section .dropdown-section-wrapper .publish-date .date-wrapper .date-input-container label input[type=date]::-webkit-calendar-picker-indicator {
+.main-content-wrapper .filter-books-wrapper .media-type-section .dropdown-section-wrapper .publish-date .date-wrapper .date-input-container label input[type=date]::-webkit-calendar-picker-indicator {
   opacity: 0;
   cursor: pointer;
 }
-.main-content-wrapper .filter-books-wrapper .books-section {
+.main-content-wrapper .books-section {
   max-width: 1230px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -431,18 +449,18 @@ body {
        column-gap: 24px;
   row-gap: 30px;
 }
-.main-content-wrapper .filter-books-wrapper .books-section .card {
+.main-content-wrapper .books-section .card {
   position: relative;
   margin: 0;
   border: 1px solid rgba(51, 51, 51, 0.3764705882);
   border-radius: 10px;
   overflow: hidden;
 }
-.main-content-wrapper .filter-books-wrapper .books-section .card .book-cover {
+.main-content-wrapper .books-section .card .book-cover {
   width: 260px;
   height: 367px;
 }
-.main-content-wrapper .filter-books-wrapper .books-section .card .book-info {
+.main-content-wrapper .books-section .card .book-info {
   position: absolute;
   top: 0;
   display: flex;
@@ -451,74 +469,75 @@ body {
   height: 100%;
   width: 100%;
 }
-.main-content-wrapper .filter-books-wrapper .books-section .card .book-info .book-views {
+.main-content-wrapper .books-section .card .book-info .book-views {
   display: flex;
   align-items: center;
   justify-content: flex-end;
   gap: 4px;
   padding: 15px 12px 0 0;
 }
-.main-content-wrapper .filter-books-wrapper .books-section .card .book-info .book-views p {
+.main-content-wrapper .books-section .card .book-info .book-views p {
   color: #ffffff;
   font-family: FiraGo700;
   font-size: 1rem;
 }
-.main-content-wrapper .filter-books-wrapper .books-section .card .book-info .title-share {
+.main-content-wrapper .books-section .card .book-info .title-share {
   background-color: white;
   padding: 12px 12px 16px;
 }
-.main-content-wrapper .filter-books-wrapper .books-section .card .book-info .title-share .title-share-default {
+.main-content-wrapper .books-section .card .book-info .title-share .title-share-default {
   display: flex;
   justify-content: space-between;
 }
-.main-content-wrapper .filter-books-wrapper .books-section .card .book-info .title-share .title-share-default h2 {
+.main-content-wrapper .books-section .card .book-info .title-share .title-share-default h2 {
   font-family: FiraGo600;
   color: #333333;
   font-size: 1rem;
 }
-.main-content-wrapper .filter-books-wrapper .books-section .card .book-info .title-share .title-share-hover {
+.main-content-wrapper .books-section .card .book-info .title-share .title-share-hover {
   padding-top: 4px;
   height: 0;
   overflow: hidden;
   transition: height 0.4s;
 }
-.main-content-wrapper .filter-books-wrapper .books-section .card .book-info .title-share .title-share-hover p {
+.main-content-wrapper .books-section .card .book-info .title-share .title-share-hover p {
   color: rgba(60, 60, 67, 0.6);
   font-family: FiraGo400;
   font-size: 0.75rem;
   padding: 4px 0 12px;
 }
-.main-content-wrapper .filter-books-wrapper .books-section .card .book-info .title-share .title-share-hover span {
+.main-content-wrapper .books-section .card .book-info .title-share .title-share-hover span {
   color: rgba(60, 60, 67, 0.6);
   font-family: FiraGo400;
   font-size: 0.75rem;
 }
-.main-content-wrapper .pagination-container {
+
+.pagination-container {
   display: flex;
   justify-content: flex-end;
   width: 100%;
   margin: 124px 0 112px;
 }
-.main-content-wrapper .pagination-container .pagination-wrapper {
+.pagination-container .pagination-wrapper {
   display: flex;
   flex-direction: row;
   align-items: center;
 }
-.main-content-wrapper .pagination-container .pagination-wrapper * {
+.pagination-container .pagination-wrapper * {
   cursor: pointer;
 }
-.main-content-wrapper .pagination-container .pagination-wrapper p {
+.pagination-container .pagination-wrapper p {
   font-size: 24px;
   font-weight: 500;
   color: #022859;
   padding: 5px 10px;
   border-radius: 8px;
 }
-.main-content-wrapper .pagination-container .pagination-wrapper p.active {
+.pagination-container .pagination-wrapper p.active {
   background-color: #064aa2;
   color: white;
 }
-.main-content-wrapper .pagination-container .pagination-wrapper img:last-child {
+.pagination-container .pagination-wrapper img:last-child {
   rotate: 180deg;
 }
 
@@ -987,6 +1006,13 @@ header .header_wrapper .burger_menu .line {
   color: #13297f;
 }
 
+.about-project-header a {
+  transition: color 0.2s;
+}
+.about-project-header a:hover {
+  color: #fff !important;
+}
+
 .about-main {
   font-family: FiraGo400;
 }
@@ -999,17 +1025,17 @@ header .header_wrapper .burger_menu .line {
 .about-main h2 {
   margin-bottom: 16px;
   color: #0468dc;
-  font-family: inherit;
-  font-size: 40px;
+  font-family: FiraGO700;
+  font-size: 36px;
   font-weight: bold;
   line-height: normal;
 }
 .about-main p,
 .about-main .instructions-page li {
   color: #333333;
-  font-family: inherit;
-  font-size: 20px;
-  font-weight: normal;
+  font-family: FiraGO350;
+  font-size: 18px;
+  font-weight: 350;
   line-height: normal;
   line-height: 1.5;
 }
@@ -1037,19 +1063,19 @@ header .header_wrapper .burger_menu .line {
   flex-direction: column;
   padding: 30px 0;
 }
-.about-main .contacts-section > div ul li {
+.about-main .contacts-section > div ul li:nth-of-type(2) {
+  text-decoration: underline;
+}
+.about-main .contacts-section > div ul li a {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 20px;
-}
-.about-main .contacts-section > div ul li a {
   color: #333333;
-  font-family: inherit;
+  font-family: Firago500;
   font-size: 22px;
   font-weight: 500;
   line-height: normal;
-  font-family: Firago500;
   line-height: 26px;
 }
 .about-main .contacts-section > div ul img {
@@ -1065,6 +1091,63 @@ header .header_wrapper .burger_menu .line {
   height: 288px;
   border-radius: 10px;
   border: 2px solid #0468dc;
+}
+
+.about-project-footer .contacts-container h2 {
+  color: #fff;
+  font-family: FiraGO700;
+  font-size: 22px;
+  font-weight: 700;
+  line-height: normal;
+}
+.about-project-footer .contacts-wrapper a {
+  margin-top: 16px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 20px;
+  color: #fff;
+  font-family: inherit;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: normal;
+  font-family: Firago400;
+  line-height: 26px;
+}
+.about-project-footer .contacts-wrapper a img {
+  height: 40px;
+  width: 40px;
+  aspect-ratio: 1;
+}
+.about-project-footer .contacts-wrapper li:nth-of-type(2),
+.about-project-footer .contacts-wrapper li:nth-of-type(4) {
+  text-decoration: underline;
+}
+.about-project-footer .usage-container > a:first-of-type {
+  color: #fff;
+  font-family: FiraGO700;
+  font-size: 22px;
+  font-weight: 700;
+  line-height: normal;
+}
+.about-project-footer .usage-container > a:last-of-type {
+  margin-top: 40px;
+  color: #fff;
+  font-family: FiraGO400;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: normal;
+}
+.about-project-footer .footer-additional-info {
+  background-color: #0468dc;
+}
+.about-project-footer .footer-additional-info > aside p {
+  color: #fff;
+  font-family: FiraGO300;
+  font-size: 12px;
+  font-weight: 300;
+  line-height: normal;
+  padding: 30px;
 }
 
 body {
