--- a/view/flip-page.html
+++ b/view/flip-page.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../styles/css/global.css" />
 
     <!-- page-flip cdn-->
-    <script src="../node_modules/page-flip/dist/js/page-flip.browser.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/page-flip@latest/dist/js/page-flip.browser.js"></script>
     <!-- pdfjs-lib cdn -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
   </head>
