--- a/view/about-project.html
+++ b/view/about-project.html
@@ -64,26 +64,19 @@
           <h2>პროექტის შესახებ</h2>
           <article>
             <p>
-              ილია ჭავჭავაძის გამომცემლობის ვებ-გვერდი, სახელწოდება და ქვედა
-              ტექსტი: ილია ჭავჭავაძის გამომცემლობის ვებ-გვერდი - არის ონლაინ
-              ბიბლიოთეკა, რომელშიც თავმოყრილი იქნება ილია ჭავჭავაძის წიგნები.
-              ონლაინ წიგნების საცავი საშუალებას მისცემს უნივერსიტეტში არსებულ
-              მკლევარებს, სტუდენტებსა და პროფესორებს, რომ წაიკითხონ, გაეცნონ და
-              გამოიკვლიონ, ილია ჭავჭავაძის წიგნები და სამომავლოდ დაემატება,
-              ნათარგმნები, ხელწერები, ჟურნალები, წერილები და ა.შ. ონლაინ
-              ბიბლიოთეკა იქნება ელექტრონული საცავი, რომელიც გაამარტივებს წვდომას
-              ილია ჭავჭავაძის რესურსებთან.
+              ილიას სახელმწიფო უნივერსიტეტის ბიბლიოთეკა წარმოგიდგენთ უნიკალურ
+              პლატფორმას - ილია ჭავჭავაძის გამოცემების ციფრულ არქივს. 2024
+              წლიდან შექმნილ არქივში თავმოყრილია ილია ჭავჭავაძის ყველა ის
+              გამოცემა, რომელიც ჩვენი უნივერსიტეტის ბიბლიოთეკის ფონდებშია
+              დაცული, მათ შორის, 1880 წლიდან დღემდე გამოცემული უნიკალური
+              ერთეულები. პლატფორმის შექმნის მიზანია, გაამარტივოს ილია ჭავჭავაძის
+              შემოქმედების შესახებ ინფორმაციის მოძიება და მასზე ციფრული
+              ხელმისაწვდომობა.
             </p>
             <p>
-              ლორემ იპსუმ ნაბოძებ გვიკრძალავდნენ ესთეტიკურად მოღუნა დასკვნით
-              მქვია შევმძვრალვარ. საშვების ვახტანგს ორვეს, მიმზიდველ ქართულადო
-              გამოუშვებდა უმძიმდა ფილტვებით. დავიჭირე ჰჩემობდა ნაბოძებ ხევში
-              სდუმდნენ ირგებდა ფილტვებით დავიჯერე, ოცნებამ, საწყალო გააკეთებინა.
-              უარჰყო საწყალო მქვია საბოლოოდ პაციფისტებსაც შენათ კვამლს
-              ავტოგრაფების ცხოველურის მოდისო მიუსაფარ მოღუნა ავისმომასწავებლად
-              ნანობდა. გაიფრენდნენ დავსთრგუნო დაყრდნობილი ილო ხიზნობა,
-              შევმძვრალვარ ირგვლივაც არჩილი დაიხრჩო ვვიფიქრებ გადმომხობოდა
-              ავისმომასწავებლად დასკვნით სდუმდნენ.
+              არქივში ყველა რესურსი ღია წვდომით არის განთავსებული, რაც ყველა
+              დაინტერესებულ პირს საშუალებას მისცემს, გამოიყენონ მასალები როგორც
+              სწავლა-სწავლების, ისე კვლევითი მიზნებისთვის.
             </p>
           </article>
         </section>
